# study_of_algorithms

./: .clang-format  .gitignore  CMakeLists.txt
main/: CMakeLists.txt  main.cpp
main/include/: command.h  common.h  crc32.h  factorial.h  list_iterator.h  list_of.h  polynome.h  stl_algorithm.h  types.h
main/source/: command.cpp  list_of.cpp
test/: CMakeLists.txt  factorial.cpp  main.cpp
test/tests/: factorial.cpp  list_iterator.cpp  list_of.cpp  test_algorithm.cpp  test_get_type_command.cpp  test_list_iterator.cpp  test_list_of.cpp  test_string_trim.cpp
